--- a/index.html
+++ b/index.html
@@ -57,12 +57,12 @@ $ git checkout gh-pages
 <h3>
 <a name="authors-and-contributors-github-usernames" class="anchor" href="#authors-and-contributors-github-usernames"><span class="octicon octicon-link"></span></a>Authors and Contributors (GitHub usernames)</h3>
 
-<p><a href="https://github.com/modea320" class="user-mention">@modea320</a> <a href="https://github.com/alexwhiteside1" class="user-mention">@alexwhiteside1</a> <a href="https://github.com/glogan" class="user-mention">@glogan</a> dinkovs mlogalbo</p>
+<p><a href="https://github.com/modea320" class="user-mention">@modea320</a> <a href="https://github.com/alexwhiteside1" class="user-mention">@alexwhiteside1</a> <a href="https://github.com/glogan" class="user-mention">@glogan</a> @dinkovs @mlogalbo @danyrin92 @Captwalloper @aaronator @huynhk</p>
 
 <h3>
-<a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
+<a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Contact:</h3>
 
-<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
+<p>Feel free to contact developer, Matthew O'Dea, at modea320@gmail.com</p>
       </section>
     </div>
 
