updated index for descriptions

--- a/index.html
+++ b/index.html
@@ -34,15 +34,19 @@
         <h3>
 <a name="welcome-to-broadside" class="anchor" href="#welcome-to-broadside"><span class="octicon octicon-link"></span></a>Welcome to Broadside</h3>
 
-<p>This is the page for Broadside, an Android Mobile Game developed in Eclipse. 
--Matthew O'Dea</p>
+<p>An Android Mobile Game</p>
 
 <pre><code>$ cd your_repo_root/repo_name
 $ git fetch origin
 $ git checkout gh-pages
 </code></pre>
 
-<p>This was developed in Fall 2013.</p>
+<p>This is the page created by Matthew O'Dea to showcase the Broadside applicaiton. 
+It was developed in Fall 2013 for the course Software Engineering. 
+The game's theme was a battleship style defense game that included pirate ships, viking ships, enemy planes, and guided missiles.
+The user also had to use his crew to defend and repair the ship as the fight went on, and we also implemented an upgrade screen to purchase new weaponry. 
+
+</p>
 
 <h3>
 <a name="design" class="anchor" href="#design"><span class="octicon octicon-link"></span></a>Design</h3>
@@ -52,7 +56,9 @@ $ git checkout gh-pages
 <h3>
 <a name="coding" class="anchor" href="#coding"><span class="octicon octicon-link"></span></a>Coding</h3>
 
-<p>Coding was done as a collaboration effort, by a group of 9, all in raw Java. This was especially a challenge without a game engine, done in a semester. The group still managed to hard code path systems, artificial intelligence, and smooth animation and overall gameplay. </p>
+<p>Coding was done using the Eclipse IDE and using a GitHub repository. We used an MVC architecture on the android platform.
+It was an especially challenging project because everything from the enemy path systems to the animations was hard coded in raw Java in a semester, with no game engine involved. 
+</p>
 
 <h3>
 <a name="authors-and-contributors-github-usernames" class="anchor" href="#authors-and-contributors-github-usernames"><span class="octicon octicon-link"></span></a>Authors and Contributors (GitHub usernames)</h3>
